# yrai

./: .gitignore  LICENSE  build.gradle  settings.gradle
app/: .gitignore  build.gradle
app/src/main/java/muandrew/com/yrai/: Test.java
app/src/main/kotlin/com/muandrew/yari/: AIModule.kt  DPlan.kt  DTask.kt  KRunner.kt
app/src/main/kotlin/com/muandrew/yari/common/agent/: AgentFactory.kt  NoOpAgent.kt  UnitAgent.kt
app/src/main/kotlin/com/muandrew/yari/common/debug/: Overlay.kt
app/src/main/kotlin/com/muandrew/yari/terran/agent/: BuildOrderAgent.kt  CmmndCtrAgent.kt  SCVAgent.kt
app/src/test/java/muandrew/com/yrai/: ExampleUnitTest.kt
cpp/: CMakeLists.txt  README.md  init.sh
cpp/native/: CMakeLists.txt
cpp/native/src/: Native.cpp  com_muandrew_ui_Native.h  main.cpp  window.cpp  window.h
gradle/wrapper/: gradle-wrapper.properties
jni/: build.gradle
jni/src/main/java/com/muandrew/root/: Root.java
jni/src/main/java/com/muandrew/ui/: Native.java
jni/src/main/java/com/muandrew/util/: OSType.java
lib/: build.gradle
lib/src/main/kotlin/com/muandrew/yrai/agent/: Agent.kt
lib/src/main/kotlin/com/muandrew/yrai/goal/: Goal.kt  NoOpGoal.kt  StackGoal.kt  Telegram.kt
native_resource/: build.gradle
